ajout commande git pull

--- a/hello.html
+++ b/hello.html
@@ -35,4 +35,9 @@
 			<p><script src="https://gist.github.com/martin-vaillancourt/ae1af08a29a98065429326ed4e280fd5.js"></script></p>
 		</div>
 		
+		<!-- commande git -->
+		<div>
+			<p>git pull</p>
+		</div>
+		
 </body></html>
